--- a/app.json
+++ b/app.json
@@ -14,7 +14,8 @@
     "web": {
       "bundler": "metro",
       "output": "single",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/favicon.png",
+      "baseUrl": "/KidFinance-P2W"
     },
     "plugins": ["expo-router"],
     "experiments": {
