--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
       "bundler": "metro",
       "output": "single",
       "favicon": "./assets/images/favicon.png",
-      "baseUrl": "/KidFinance-P2W"
+      "baseUrl": "/KidFinance-P2W/"
     },
     "plugins": ["expo-router"],
     "experiments": {
