--- a/app.json
+++ b/app.json
@@ -15,7 +15,8 @@
       "bundler": "metro",
       "output": "single",
       "favicon": "./assets/images/favicon.png",
-      "publicPath": "/KidP2/"
+      "publicPath": "/KidP2/",
+      "baseUrl": "/KidP2/"
     },
     "plugins": ["expo-router"],
     "experiments": {
