--- a/package.json
+++ b/package.json
@@ -12,13 +12,8 @@
     "expo",
     "piggy-bank"
   ],
-  "author": "atsang081",
+  "author": "Kids Piggy Bank Team",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/atsang081/KidP2.git"
-  },
-  "homepage": "https://atsang081.github.io/KidP2",
   "scripts": {
     "dev": "EXPO_NO_TELEMETRY=1 expo start",
     "start": "EXPO_NO_TELEMETRY=1 expo start",
